--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
               placeholder="10,00"
             />
           </div>
-          <input type="submit" value="BERECHNEN" />
+          <input type="submit" value="Berechnen" />
         </form>
         <article>
           <h2>Ergebnis</h2>
